# goadus-website

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  MANIFEST.in  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  pre-commit.yml  registry.yml
.woodpecker/: docker.yaml  pre-commit.yaml  tox.yaml
goadus/: __init__.py  admin.py  apps.py  asgi.py  baat.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py  werder.py  wsgi.py
goadus/management/commands/: __init__.py  cleanexpired.py  cleanexpiredimages.py
goadus/migrations/: 0001_initial.py  0002_apikey.py  __init__.py
goadus/static/goadus/: jquery.js  jquery.zoom.js  squirrel.jpg.license  style.css
goadus/templates/admin/: custom_change_form.html
goadus/templates/goadus/: base.html  image.html  imageset.html  index.html  login.html  logout.html  upload.html
goadus/tests/: test_stub.py
