# SPDX-PackageName: goadus-website
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://forge.colobox.com/rfinnie/goadus-website
# SPDX-FileCopyrightText: © 2020 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: MPL-2.0
[project]
name = "goadus"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "goad.us"
readme = "README.md"
requires-python = ">=3.12"
license = "MPL-2.0"
dependencies = [
    "Django",
    "django[argon2]",
    "django-xff",
    "django-crispy-forms",
    "crispy-bootstrap4",
    "Pillow",
    "pillow-heif",
    "tzdata",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
gunicorn = ["gunicorn"]

[tool.setuptools.packages.find]
include = [
    "goadus",
    "goadus.migrations",
    "goadus.management.commands",
    "goadus.tests",
]

[tool.black]
line-length = 132
